--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
         <header class="header">
             <h1 class="header__caption">Ты готов стать профессионалом?</h1>
             <p class="header__text">Мы ищем <span class="header__text-href">талантов</span> и <span class="header__text-href">саппортов</span> в команду. Решите на какую категорию вы претендуете.</p>
-            <a class="header__profile-href"><!--<span class="header__profile-href-X">&#10010;</span>-->заполнить анкету</a>
+            <!--<a class="header__profile-href">заполнить анкету</a>-->
+            <a class="header__profile-href buttons__button-cover learn-more">
+                <div class="circle">
+                    <span class="icon arrow"></span>
+                </div>
+                <p class="button-text">заполнить анкету</p>
+            </a>
         </header>
         <main>
             <div class="weDo">
